--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,15 @@
 @import "tailwindcss";
 
+/* globals.css */
+.scrollbar-hide {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
